--- a/Resources/Private/Language/locallang_tca.xlf
+++ b/Resources/Private/Language/locallang_tca.xlf
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes" ?>
 <xliff version="1.0">
-	<file source-language="en" datatype="plaintext" original="messages" date="2024-01-01T00:00:00Z" product-name="elevate_to_admin">
+	<file source-language="en" datatype="plaintext" original="messages" date="2024-01-01T00:00:00Z" product-name="ll_elevate_to_admin">
 		<header/>
 		<body>
-			<trans-unit id="be_users.tx_elevate_to_admin_is_possible_admin">
+			<trans-unit id="be_users.tx_elevatetoadmin_is_possible_admin">
 				<source>Can elevate to admin</source>
 			</trans-unit>
-			<trans-unit id="be_users.tx_elevate_to_admin_admin_since">
+			<trans-unit id="be_users.tx_elevatetoadmin_admin_since">
 				<source>Admin since</source>
 			</trans-unit>
 		</body>
